# diploma-server

python/: .python-version  Dockerfile  database.db  db.sqlite  deployment.yaml  justfile  main.py  promp.txt  pyproject.toml  requirements.txt  schema.sql
python/migrations/sqlite/: 0.0.1.sql
python/pkg/: api.py  controllers.py  database.py  middleware.py  models.py  optimizer.py  utils.py
python/pkg/api/: __init__.py  fund.py  profile.py  recipient.py  requirement.py  volunteer.py
python/tests/req/: register  search  token
